get youtube video data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <h1>Electron App</h1>
   <input type="text" name="url" id="url">
   <button id="request-data">Request Data</button>
+  <button id="download-data">donlo Data</button>
   <p id="response"></p>
+  <img src="" alt="" id="thumbnail">
   <script src="renderer.js"></script>
 </body>
 </html>
