--- a/index.html
+++ b/index.html
@@ -1,17 +1,95 @@
+<!--
+ID  EXT   RESOLUTION FPS CH │   FILESIZE  TBR PROTO │ VCODEC         VBR ACODEC      ABR ASR MORE INFO
+───────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+sb3 mhtml 48x27        0    │                 mhtml │ images                                 storyboard
+sb2 mhtml 80x45        0    │                 mhtml │ images                                 storyboard
+sb1 mhtml 160x90       0    │                 mhtml │ images                                 storyboard
+sb0 mhtml 320x180      0    │                 mhtml │ images                                 storyboard
+233 mp4   audio only        │                 m3u8  │ audio only         unknown             [ko] Default
+234 mp4   audio only        │                 m3u8  │ audio only         unknown             [ko] Default
+139 m4a   audio only      2 │   12.49MiB  49k https │ audio only         mp4a.40.5   49k 22k [ko] low, m4a_dash
+249 webm  audio only      2 │   12.97MiB  51k https │ audio only         opus        51k 48k [ko] low, webm_dash
+250 webm  audio only      2 │   17.17MiB  67k https │ audio only         opus        67k 48k [ko] low, webm_dash
+140 m4a   audio only      2 │   33.14MiB 129k https │ audio only         mp4a.40.2  129k 44k [ko] medium, m4a_dash
+251 webm  audio only      2 │   33.75MiB 132k https │ audio only         opus       132k 48k [ko] medium, webm_dash
+602 mp4   256x144     15    │ ~ 22.95MiB  88k m3u8  │ vp09.00.10.08  88k video only
+269 mp4   256x144     30    │ ~ 23.90MiB  91k m3u8  │ avc1.4D400C    91k video only
+160 mp4   256x144     30    │    5.85MiB  23k https │ avc1.4D400C    23k video only          144p, mp4_dash
+603 mp4   256x144     30    │ ~ 24.85MiB  95k m3u8  │ vp09.00.11.08  95k video only
+278 webm  256x144     30    │    6.31MiB  25k https │ vp9            25k video only          144p, webm_dash
+229 mp4   426x240     30    │ ~ 33.15MiB 126k m3u8  │ avc1.4D4015   126k video only
+133 mp4   426x240     30    │   10.30MiB  40k https │ avc1.4D4015    40k video only          240p, mp4_dash
+604 mp4   426x240     30    │ ~ 35.07MiB 134k m3u8  │ vp09.00.20.08 134k video only
+242 webm  426x240     30    │   11.39MiB  45k https │ vp9            45k video only          240p, webm_dash
+230 mp4   640x360     30    │ ~ 67.36MiB 257k m3u8  │ avc1.4D401E   257k video only
+134 mp4   640x360     30    │   17.71MiB  69k https │ avc1.4D401E    69k video only          360p, mp4_dash
+18  mp4   640x360     30  2 │   43.75MiB 171k https │ avc1.42001E        mp4a.40.2       44k [ko] 360p
+605 mp4   640x360     30    │ ~ 66.89MiB 255k m3u8  │ vp09.00.21.08 255k video only
+243 webm  640x360     30    │   18.12MiB  71k https │ vp9            71k video only          360p, webm_dash
+231 mp4   854x480     30    │ ~ 90.60MiB 346k m3u8  │ avc1.4D401F   346k video only
+135 mp4   854x480     30    │   28.36MiB 111k https │ avc1.4D401F   111k video only          480p, mp4_dash
+606 mp4   854x480     30    │ ~ 83.65MiB 319k m3u8  │ vp09.00.30.08 319k video only
+244 webm  854x480     30    │   26.50MiB 104k https │ vp9           104k video only          480p, webm_dash
+232 mp4   1280x720    30    │ ~123.71MiB 472k m3u8  │ avc1.64001F   472k video only
+136 mp4   1280x720    30    │   49.94MiB 195k https │ avc1.64001F   195k video only          720p, mp4_dash
+609 mp4   1280x720    30    │ ~142.00MiB 542k m3u8  │ vp09.00.31.08 542k video only
+247 webm  1280x720    30    │   58.02MiB 227k https │ vp9           227k video only          720p, webm_dash
+270 mp4   1920x1080   30    │ ~193.09MiB 737k m3u8  │ avc1.640028   737k video only
+137 mp4   1920x1080   30    │   89.28MiB 349k https │ avc1.640028   349k video only          1080p, mp4_dash
+614 mp4   1920x1080   30    │ ~148.50MiB 567k m3u8  │ vp09.00.40.08 567k video only
+248 webm  1920x1080   30    │   64.25MiB 251k https │ vp9           251k video only          1080p, webm_dash
+-->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Electron App</title>
+  <link rel="stylesheet" href="./main.css">
+  <title>YouTube Download</title>
 </head>
+
 <body>
-  <h1>Electron App</h1>
-  <input type="text" name="url" id="url">
-  <button id="request-data">Request Data</button>
-  <button id="download-data">donlo Data</button>
-  <p id="response"></p>
-  <img src="" alt="" id="thumbnail">
+  <div class="left">
+    <div class="videoinfo">
+      <img src="https://i.ytimg.com/vi/dQw4w9WgXcQ/hqdefault.jpg" alt="Rick Astley - Never Gonna Give You Up (Video)">
+      <span class="title">Rick Astley - Never Gonna Give You Up (Video)</span>
+      <span class="author">Rick Astley</span>
+    </div>
+    <div class="info">
+      <span class="views">1.2B views</span>
+      <span class="point">•</span>
+      <span class="date">11 years ago</span>
+    </div>
+  </div>
+  <div class="right">
+    <div class="formats">
+      <div class="format">
+        <span class="resolution">1080p</span>
+        <div>
+          <span class="size">~148.50MiB</span>
+          <span class="bitrate">567k</span>
+          <span class="fps">30</span>
+          <span class="codec">vp09.00.40.08</span>
+        </div>
+      </div>
+
+      <div class="format">
+        <span class="resolution">1080p</span>
+        <div>
+          <span class="size">~148.50MiB</span>
+          <span class="bitrate">567k</span>
+          <span class="fps">30</span>
+          <span class="codec">vp09.00.40.08</span>
+        </div>
+      </div>
+    </div>
+    <div class="download">
+      <button>Download</button>
+    </div>
+  </div>
   <script src="renderer.js"></script>
 </body>
+
 </html>
