--- a/index.html
+++ b/index.html
@@ -66,24 +66,110 @@ sb0 mhtml 320x180      0    │                 mhtml │ images                
   <div class="right">
     <div class="formats">
       <div class="format">
-        <span class="resolution">1080p</span>
-        <div>
-          <span class="size">~148.50MiB</span>
-          <span class="bitrate">567k</span>
-          <span class="fps">30</span>
-          <span class="codec">vp09.00.40.08</span>
+        <span class="resolution">720p</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~14.50MiB</span>
+            <span class="bitrate">557k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">H.265</span>
+          </div>
         </div>
       </div>
 
       <div class="format">
         <span class="resolution">1080p</span>
-        <div>
-          <span class="size">~148.50MiB</span>
-          <span class="bitrate">567k</span>
-          <span class="fps">30</span>
-          <span class="codec">vp09.00.40.08</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
         </div>
       </div>
+
+      <div class="format">
+        <span class="resolution">4K</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="format">
+        <span class="resolution">8K</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="format">
+        <span class="resolution">144p</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="format">
+        <span class="resolution">240p</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="format">
+        <span class="resolution">360p</span>
+        <div class="divider"></div>
+        <div class="info">
+          <div>
+            <span class="size">~148.50MiB</span>
+            <span class="bitrate">567k</span>
+          </div>
+          <div>
+            <span class="fps">30fps</span>
+            <span class="codec">vp09.00.40.08</span>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="download">
       <button>Download</button>
